LU-11481 utils: disable lfs migrate -m

Lustre 2.11 and earlier have bugs in directory migration that risk
data loss.  The fixes landed to 2.12 are too complex to backport.
This patch prevents an unaware user from risking their data by using
lfs migrate -m.  This is not a backport from master.

Skip all the tests that issue lfs migrate -m as they now fail.

Change-Id: I6d620429a0e10941f88285fbcf178797a71be3a6
Signed-off-by: Olaf Faaland <faaland1@llnl.gov>
Reviewed-on: https://review.whamcloud.com/33960
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>