lustre/tests/recovery-small.sh
@@ -2120,6 +2120,9 @@ test_110g () {
 	[[ $(lustre_version_code $SINGLEMDS) -ge $(version_code 2.6.57) ]] ||
 		{ skip "Need MDS version at least 2.6.57"; return 0; }
 
+	[ $(lustre_version_code $SINGLEMDS) -lt $(version_code 2.11.56) ] &&
+		skip "lustre < 2.11.56 does not support migrate -m"
+
 	[ $MDSCOUNT -lt 2 ] && skip "needs >= 2 MDTs" && return 0
 	local remote_dir=$DIR/$tdir/remote_dir
 	local MDTIDX=1
